# skill-builder

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  install.sh  skills.json
.config/: nextest.toml
.github/workflows/: release.yml  test.yml  update-docs.yml
prompts/: UPDATE_SKILL.md
source/shadcn-svelte/: llms.txt
src/: agent.rs  cache.rs  config.rs  download.rs  index.rs  init.rs  install.rs  install_resolver.rs  lib.rs  local_storage.rs  main.rs  output.rs  package.rs  repository.rs  s3.rs  storage.rs  validate.rs
testdata/: skills.json  skills_with_repo.json
testdata/fixtures/: sample_llms.txt
testdata/fixtures/invalid_skill/: SKILL.md
testdata/fixtures/sample_docs/: api.md  guide.md
testdata/fixtures/valid_skill/: SKILL.md
testdata/fixtures/valid_skill/references/: example.md
tests/: agent_test.rs  cache_test.rs  cli_test.rs  config_test.rs  download_test.rs  index_test.rs  install_script_test.sh  package_test.rs  repository_test.rs  validate_test.rs
tests/common/: mod.rs
