[package]
name = "skill-builder"
version = "0.1.0"
edition = "2021"
description = "A CLI tool that builds Claude Code skills from any llms.txt URL"
license = "MIT"
repository = "https://github.com/antstanley/skill-builder"

[[bin]]
name = "skill-builder"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["blocking"] }
regex = "1"
zip = "2"
anyhow = "1"
url = "2"

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"
wiremock = "0.6"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
