[package]
name = "skill-builder"
version = "0.1.0"
edition = "2021"
description = "A CLI tool that builds Claude Code skills from any llms.txt URL"
license = "MIT"
repository = "https://github.com/antstanley/skill-builder"

[[bin]]
name = "sb"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
regex = "1"
zip = "8"
anyhow = "1"
url = "2"
rust-s3 = "0.35"
tokio = { version = "1", features = ["rt-multi-thread"] }
dialoguer = "0.11"
dirs = "6"
chrono = { version = "0.4", features = ["serde"] }
console = "0.15"
indicatif = "0.17"

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"
wiremock = "0.6"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

[profile.release]
lto = true
strip = true
codegen-units = 1
